--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,52 @@
 }
 body {
     font-size: 16px;
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1;
+}
+a {
+    text-decoration: none;
+}
+ul {
+    list-style-type: none;
+}
+p {
+    line-height: 1.7;
+    color: var(--text-clr);
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 600;
+    color: var(--black-clr);
+}
+img {
+    max-width: 100%;
+    height: auto;
+}
+.container {
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-left: auto;
+    margin-right: auto;
+}
+@media screen and (min-width: 576px) {
+    .container {
+        width: 540px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .container {
+        width: 720px;
+    }
+}
+@media screen and (min-width: 992px) {
+    .container {
+        width: 960px;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .container {
+        width: 1140px;
+    }
 }
 /* end basic rules */
