--- a/css/styles.css
+++ b/css/styles.css
@@ -222,6 +222,11 @@ svg {
     place-content: center;
     background-color: var(--secondary-clr);
 }
+@media screen and (min-width: 576px) and (max-width: 768px) {
+    .hero-area {
+        padding-top: 5rem;
+    }
+}   
 @media screen and (max-width: 576px) {
     .hero-area {
         min-height: calc(100vh - 75px)
@@ -576,3 +581,40 @@ input#featured-products:checked ~ .tab-list [data-value="featured-products"] {
     display: block;
 }
 /* end product category */
+/* start facility area */
+.facility-area {
+    padding: 5rem 0;
+    background-color: var(--secondary-clr);
+}
+.facility-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-gap: 30px;
+}
+.facility .icon {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: var(--white-clr);
+    outline: 1px solid var(--white-clr);
+    outline-offset: 5px;
+    margin: 0 auto 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.facility .icon svg {
+    width: 30px;
+    height: 30px;
+    transition: all .5s ease-in-out;
+}
+.facility .icon:hover svg {
+    transform: rotateY(180deg);
+}
+.facility h3 {
+    font-size: .95rem;
+    text-align: center;
+    font-weight: 500;
+    line-height: 1.5;
+}
+/* end facility area */
