--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@
     color: var(--white-clr);
 }
 body {
-    height: 10000px;
     font-size: 16px;
     font-weight: 400;
     line-height: 1;
@@ -746,7 +745,7 @@ input#rright-bullet:checked ~ .testimonial-slider .slides .slide:last-child {
 }
 .blog-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
     grid-gap: 30px;
 }
 .blog-cart {
@@ -851,3 +850,47 @@ input#rright-bullet:checked ~ .testimonial-slider .slides .slide:last-child {
     opacity: .8;
 }
 /* end newsletter */
+/* start footer */
+footer {
+    padding: 5rem 0 3rem;
+    background-color: var(--black-clr);
+}
+.footer-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-row-gap: 30px;
+}
+@media screen and (max-width: 992px) {
+    .footer-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media screen and (max-width: 768px) {
+    .footer-container {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+.foot-title {
+    font-size: 1rem;
+    font-weight: 500;
+    color: rgba(255, 255, 255, .8);
+    margin-bottom: 25px;
+}
+.links li a {
+    display: block;
+    font-weight: 500;
+    padding: 10px 0;
+    color: var(--text-clr);
+}
+.links li a:hover {
+    color: var(--primary-clr);
+}
+.foot:last-child .links li {
+    padding: 10px 0;
+    color: var(--text-clr);
+    line-height: 1.5;
+}
+.foot:last-child .links li i {
+    margin-right: .5rem;
+}
+/* end footer */
